feat: TIER 1 UX enhancements - page transitions, skeleton loading, smooth scroll, parallax

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -63,6 +63,10 @@
     <link rel="stylesheet" href="{% static 'css/utilities.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'css/toast-notifications.css' %}">
+    <link rel="stylesheet" href="{% static 'css/page-transitions.css' %}">
+    <link rel="stylesheet" href="{% static 'css/skeleton-loading.css' %}">
+    <link rel="stylesheet" href="{% static 'css/smooth-scroll.css' %}">
+    <link rel="stylesheet" href="{% static 'css/parallax.css' %}">
 
 </head>
 <body>
@@ -220,6 +224,18 @@
 
     <!-- Toast Notifications System -->
     <script src="{% static 'js/toast-notifications.js' %}"></script>
+
+    <!-- Page Transitions with HTMX -->
+    <script src="{% static 'js/page-transitions.js' %}"></script>
+
+    <!-- Skeleton Loading System -->
+    <script src="{% static 'js/skeleton-loading.js' %}"></script>
+
+    <!-- Smooth Scroll & Anchor Navigation -->
+    <script src="{% static 'js/smooth-scroll.js' %}"></script>
+
+    <!-- Parallax & Scroll Effects -->
+    <script src="{% static 'js/parallax.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
