feat: TIER 2-3 enhancements - card animations, infinite scroll, advanced filters, lazy loading

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -67,6 +67,10 @@
     <link rel="stylesheet" href="{% static 'css/skeleton-loading.css' %}">
     <link rel="stylesheet" href="{% static 'css/smooth-scroll.css' %}">
     <link rel="stylesheet" href="{% static 'css/parallax.css' %}">
+    <link rel="stylesheet" href="{% static 'css/card-animations.css' %}">
+    <link rel="stylesheet" href="{% static 'css/infinite-scroll.css' %}">
+    <link rel="stylesheet" href="{% static 'css/advanced-filters.css' %}">
+    <link rel="stylesheet" href="{% static 'css/lazy-loading.css' %}">
 
 </head>
 <body>
@@ -236,6 +240,18 @@
 
     <!-- Parallax & Scroll Effects -->
     <script src="{% static 'js/parallax.js' %}"></script>
+
+    <!-- Advanced Card Animations -->
+    <script src="{% static 'js/card-animations.js' %}"></script>
+
+    <!-- Infinite Scroll System -->
+    <script src="{% static 'js/infinite-scroll.js' %}"></script>
+
+    <!-- Advanced Filters & Search -->
+    <script src="{% static 'js/advanced-filters.js' %}"></script>
+
+    <!-- Lazy Loading Images -->
+    <script src="{% static 'js/lazy-loading.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
