feat: TIER 4 mobile features - touch gestures, swipe, pull-to-refresh

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -71,6 +71,7 @@
     <link rel="stylesheet" href="{% static 'css/infinite-scroll.css' %}">
     <link rel="stylesheet" href="{% static 'css/advanced-filters.css' %}">
     <link rel="stylesheet" href="{% static 'css/lazy-loading.css' %}">
+    <link rel="stylesheet" href="{% static 'css/touch-gestures.css' %}">
 
 </head>
 <body>
@@ -252,6 +253,12 @@
 
     <!-- Lazy Loading Images -->
     <script src="{% static 'js/lazy-loading.js' %}"></script>
+
+    <!-- Touch Gestures (Swipe, Long Press, Pinch, etc) -->
+    <script src="{% static 'js/touch-gestures.js' %}"></script>
+
+    <!-- Pull-to-Refresh System -->
+    <script src="{% static 'js/pull-to-refresh.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
