feat: TIER 5 form validation - real-time validation, auto-save, password strength, field grouping

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -72,6 +72,7 @@
     <link rel="stylesheet" href="{% static 'css/advanced-filters.css' %}">
     <link rel="stylesheet" href="{% static 'css/lazy-loading.css' %}">
     <link rel="stylesheet" href="{% static 'css/touch-gestures.css' %}">
+    <link rel="stylesheet" href="{% static 'css/form-validation.css' %}">
 
 </head>
 <body>
@@ -259,6 +260,9 @@
 
     <!-- Pull-to-Refresh System -->
     <script src="{% static 'js/pull-to-refresh.js' %}"></script>
+
+    <!-- Form Validation & Auto-Save -->
+    <script src="{% static 'js/form-validation.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
