feat: TIER 7 Web APIs - geolocation, camera, clipboard, share, device motion, screen, battery

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -282,6 +282,9 @@
 
     <!-- PWA & Offline Support -->
     <script src="{% static 'js/pwa-manager.js' %}"></script>
+
+    <!-- Web APIs (Geolocation, Camera, Clipboard, Share, etc) -->
+    <script src="{% static 'js/web-apis.js' %}"></script>
     
         <!-- Small helper: add missing Bootstrap form-control classes to form fields if not present -->
         <script>
