--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -87,6 +87,7 @@
     <link rel="stylesheet" href="{% static 'css/form-validation.css' %}">
     <link rel="stylesheet" href="{% static 'css/form-enhancements.css' %}">
     <link rel="stylesheet" href="{% static 'css/pwa.css' %}">
+    <link rel="stylesheet" href="{% static 'css/modal-fix.css' %}">
 
 </head>
 <body>
